deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmfinder-ui-deployment
spec:
  selector:
    matchLabels:
      app: pharmfinder
  replicas: 1
  template:
    metadata:
      labels:
        app: pharmfinder
    spec:
      containers:
      - name: pharmfinder-ui-container
        image: ghcr.io/saad-rahman-organization/devhub-devops:main-xxx
        ports:
        - containerPort: 8080
        imagePullSecrets:
        - name: pharmfinder-ui-secret
